%%{init: {'theme': 'base', 'themeVariables': { 'primaryColor': '#e8f5e9', 'primaryTextColor': '#1b5e20', 'primaryBorderColor': '#4caf50', 'lineColor': '#2e7d32'}}}%%

erDiagram
    USERS {
        uuid id PK
        varchar username UK
        varchar first_name
        varchar second_name
        boolean organisasi
        varchar ukm
        varchar hmj
        varchar jurusan
        varchar nim
        varchar email UK
        varchar phone
        varchar alamat
        date birth_date
        varchar password_hash
        timestamp created_at
        timestamp updated_at
    }
    
    ORGANIZATIONS {
        uuid id PK
        varchar name UK
        varchar slug UK
        varchar type
        varchar description
        varchar logo_key
        varchar logo_url
        varchar hero_image
        varchar contact_email
        varchar contact_phone
        varchar website_url
        varchar instagram_url
        varchar twitter_url
        varchar linkedin_url
        jsonb links
        jsonb gallery_urls
        timestamp created_at
        timestamp updated_at
    }
    
    ROLES {
        uuid id PK
        varchar code UK
        varchar name
        timestamp created_at
        timestamp updated_at
    }
    
    USER_ROLES {
        uuid user_id FK
        varchar role_code FK
        uuid org_id FK
        timestamp created_at
    }
    
    ORG_MEMBERS {
        uuid org_id FK
        uuid user_id FK
        varchar role
        timestamp created_at
    }
    
    ORG_JOIN_REQUESTS {
        uuid id PK
        uuid org_id FK
        uuid user_id FK
        varchar applicant_name
        varchar applicant_email
        varchar applicant_nim
        varchar applicant_phone
        varchar jurusan
        text message
        varchar status
        text decision_note
        timestamp reviewed_at
        uuid reviewed_by FK
        timestamp created_at
    }
    
    SURAT {
        int id PK
        uuid org_id FK
        uuid target_org_id FK
        varchar variant
        varchar status
        varchar number
        varchar subject
        varchar to_role
        varchar to_name
        varchar to_place
        varchar to_city
        varchar file_key
        varchar file_url
        text approval_note
        uuid created_by FK
        uuid submitted_by FK
        uuid approved_by FK
        jsonb meta_json
        timestamp created_at
        timestamp updated_at
    }
    
    SURAT_TEMPLATES {
        int id PK
        varchar name UK
        varchar variant
        jsonb theme_json
        jsonb payload_json
        varchar description
        uuid created_by FK
        timestamp created_at
        timestamp updated_at
    }
    
    ACTIVITIES {
        uuid id PK
        uuid org_id FK
        varchar title
        text description
        varchar location
        varchar type
        boolean public
        varchar status
        text approval_note
        boolean cover_approved
        timestamp start_at
        timestamp end_at
        varchar cover_key
        jsonb metadata
        uuid created_by FK
        uuid updated_by FK
        timestamp created_at
        timestamp updated_at
    }
    
    ACTIVITY_HISTORIES {
        uuid id PK
        uuid activity_id FK
        varchar action
        jsonb changes
        uuid actor_id FK
        timestamp created_at
    }
    
    LPJ {
        uuid id PK
        uuid activity_id FK
        uuid org_id FK
        text summary
        float budget_plan
        float budget_real
        varchar report_key
        bigint file_size
        jsonb photos
        varchar status
        text note
        uuid submitted_by FK
        int revision_no
        uuid reviewed_by FK
        timestamp reviewed_at
        timestamp created_at
        timestamp updated_at
    }
    
    LPJ_HISTORIES {
        uuid id PK
        uuid lpj_id FK
        varchar action
        jsonb changes
        uuid actor_id FK
        timestamp created_at
    }
    
    NOTIFICATIONS {
        uuid id PK
        uuid user_id FK
        varchar title
        text body
        jsonb data
        timestamp read_at
        timestamp created_at
    }
    
    REFRESH_TOKENS {
        uuid id PK
        uuid user_id FK
        varchar token
        timestamp expires_at
        timestamp created_at
    }
    
    AUDIT_LOGS {
        uuid id PK
        uuid user_id FK
        varchar action
        jsonb payload
        timestamp created_at
    }

    USERS ||--o{ USER_ROLES : "has"
    USERS ||--o{ ORG_MEMBERS : "belongs to"
    USERS ||--o{ NOTIFICATIONS : "receives"
    USERS ||--o{ REFRESH_TOKENS : "has"
    USERS ||--o{ AUDIT_LOGS : "creates"
    
    ORGANIZATIONS ||--o{ ORG_MEMBERS : "has"
    ORGANIZATIONS ||--o{ ORG_JOIN_REQUESTS : "receives"
    ORGANIZATIONS ||--o{ SURAT : "creates"
    ORGANIZATIONS ||--o{ ACTIVITIES : "organizes"
    ORGANIZATIONS ||--o{ LPJ : "submits"
    
    ROLES ||--o{ USER_ROLES : "assigned"
    
    SURAT }o--|| SURAT_TEMPLATES : "uses"
    SURAT }o--|| USERS : "created by"
    SURAT }o--|| USERS : "approved by"
    
    ACTIVITIES ||--o| LPJ : "has"
    ACTIVITIES ||--o{ ACTIVITY_HISTORIES : "has"
    
    LPJ ||--o{ LPJ_HISTORIES : "has"
